tests/ui/unsafe/unsafe-fn-assign-deref-ptr.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-assign-deref-ptr.rs:2:5
   |
LL |     *p = 0;
   |     ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
